<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/custom_toolbar_title"
                android:layout_width="@dimen/social_image_height_width"
                android:layout_height="@dimen/social_image_height_width"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/right_arrow" />

            <com.example.nex4jmq.paytackapp.customviews.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/signup_image_height_width"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:text="@string/verification_code"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size_16sp" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/vertical_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/verification_text"
                android:textColor="@color/light_background"
                android:textSize="@dimen/size_14sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/tvmobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@null"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size_16sp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/pin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/vertical_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/otp_first_edittext"
                style="@style/pin_edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:contentDescription="@string/pin_content_desc"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/otp_second_edittext"
                style="@style/pin_edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:contentDescription="@string/pin_content_desc"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/otp_third_edittext"
                style="@style/pin_edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:contentDescription="@string/pin_content_desc"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/otp_forth_edittext"
                style="@style/pin_edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:contentDescription="@string/pin_content_desc"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imArrow"
            android:layout_width="@dimen/social_image_height_width"
            android:layout_height="@dimen/social_image_height_width"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/signup_image_height_width"
            android:src="@drawable/right_arrow" />

        <com.example.nex4jmq.paytackapp.customviews.BoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/signup_image_height_width"
            android:gravity="center"
            android:text="@string/verification_resend"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/size_16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <EditText
        android:id="@+id/pin_hidden_edittext"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:contentDescription="@string/pin_content_desc"
        android:cursorVisible="false"
        android:gravity="center_horizontal"
        android:maxLength="5"
        android:password="true"
        android:textColor="#00000000" />

    <com.example.nex4jmq.paytackapp.customviews.BoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/signup_image_height_width"
        android:gravity="center"
        android:text="@string/verification_otpexpire"
        android:textColor="@color/light_background"
        android:textSize="@dimen/size_16sp"
        android:textStyle="normal" />
</LinearLayout>
